powerfulseal/bases/ingress.yaml
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: powerfulseal
spec:
  rules:
  - host: powerfulseal.default.uk8s.example.com
    http:
      paths:
      - path: /
        backend:
          serviceName: powerfulseal
          servicePort: 8080
  - host: powerfulseal-exp.default.uk8s.example.com
    http:
      paths:
      - path: /
        backend:
          serviceName: powerfulseal-exp
          servicePort: 9999
